--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+@layer base {
+  table {
+    border-collapse: collapse;
+  }
+  th,
+  td {
+    border: 1px solid #000;
+    padding: 0.25rem;
+  }
+  ul,
+  ol {
+    list-style: revert;
+    margin: revert;
+    padding: revert;
+  }
+}
+
 .loader {
   width: 2rem;
   height: 2rem;
