create CourseInfo2 (TinyMCE Editor)

--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@layer base {
+/* @layer base {
   table {
     border-collapse: collapse;
   }
@@ -15,7 +15,7 @@
     margin: revert;
     padding: revert;
   }
-}
+} */
 
 .loader {
   width: 2rem;
