--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -1,27 +1,10 @@
 @import "tailwindcss";
 
-/* @layer base {
-  table {
-    border-collapse: collapse;
-  }
-  th,
-  td {
-    border: 1px solid #000;
-    padding: 0.25rem;
-  }
-  ul,
-  ol {
-    list-style: revert;
-    margin: revert;
-    padding: revert;
-  }
-} */
-
 .loader {
-  width: 2rem;
-  height: 2rem;
-  border: 4px solid #cbd5e1;
-  border-top: 4px solid #2563eb;
+  width: 3rem;
+  height: 3rem;
+  border: 6px solid #cbd5e1;
+  border-top: 6px solid #7e22ce;
   border-radius: 50%;
   animation: spin 1s linear infinite;
   display: inline-block;
