--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -4,7 +4,7 @@
   width: 3rem;
   height: 3rem;
   border: 6px solid #cbd5e1;
-  border-top: 6px solid #7e22ce;
+  border-top: 6px solid #9333ea;
   border-radius: 50%;
   animation: spin 1s linear infinite;
   display: inline-block;
